--- a/frontend/src/components/History/History.module.scss
+++ b/frontend/src/components/History/History.module.scss
@@ -71,14 +71,14 @@
   }
 }
 
-button {
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #d9534f;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
+// button {
+//   margin-top: 10px;
+//   padding: 10px 20px;
+//   background-color: #d9534f;
+//   color: white;
+//   border: none;
+//   cursor: pointer;
+// }
 
 button:hover {
   background-color: #c9302c;
