--- a/frontend/src/pages/Node/main.module.scss
+++ b/frontend/src/pages/Node/main.module.scss
@@ -26,6 +26,19 @@
       height: 100%;
       border-bottom: 1px solid #eee;
       padding: 10px;
+
+      .nav-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+
+        img {
+          margin-left: 20px;
+          width: 48px;
+          height: 48px;
+        }
+      }
     }
   }
 
