--- a/frontend/src/components/About/About.module.scss
+++ b/frontend/src/components/About/About.module.scss
@@ -97,3 +97,10 @@ $divider-color: #dfe6e9;
     }
   }
 }
+
+.loadingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; 
+}
