--- a/frontend/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/frontend/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -10,9 +10,9 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  .main{
+  .main {
     width: 100%;
+    margin-top: 88px;
+    // padding: 0 60px;
   }
 }
-
-
