--- a/frontend/src/pages/ChangePassword/ChangePassword.module.scss
+++ b/frontend/src/pages/ChangePassword/ChangePassword.module.scss
@@ -1,23 +1,40 @@
+.container{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-flow: row;
+margin-bottom: 40px;
+
 .password-container {
-    max-width: 500px;
+    max-width: 700px;
     margin: 0 auto;
     padding: 24px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
+
+  .password_image{
+    width: 40%;
+
+    img{
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
   
   .icon-container {
-    width: 48px;
-    height: 48px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     background-color: #f0f7ff;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto 16px;
+    margin: 16px;
     
-    i {
+    svg{
       color: #0066ff;
-      font-size: 20px;
+      font-size: 36px;
     }
   }
   
@@ -25,7 +42,7 @@
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 16px;
-    text-align: center;
+    text-align: left;
     color: #333;
   }
   
@@ -43,27 +60,29 @@
       display: block;
       font-weight: 500;
       margin-bottom: 8px;
+      font-size: 1.6rem;
       color: #333;
     }
     
     .input-wrapper {
       position: relative;
       
-      .input-icon {
+      svg {
         position: absolute;
         left: 12px;
         top: 50%;
         transform: translateY(-50%);
         color: #999;
-        font-size: 16px;
+        font-size:18px;
       }
       
       .input {
         width: 100%;
-        padding: 12px 40px;
+        padding: 16px 40px;
         border: 1px solid #ddd;
+        color: #999;
         border-radius: 6px;
-        font-size: 16px;
+        font-size: 14px;
         box-sizing: border-box;
         
         &:focus {
@@ -75,7 +94,7 @@
       
       .visibility-toggle {
         position: absolute;
-        right: 12px;
+        right: 45px;
         top: 50%;
         transform: translateY(-50%);
         background: none;
@@ -108,6 +127,7 @@
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
+    margin-top: 20px;
     transition: background-color 0.2s;
     
     &:hover {
@@ -115,4 +135,14 @@
     }
   }
   
+  .input-error {
+    border: 1px solid red;
+  }
+  
+  .error-message {
+    color: red;
+    font-family: "Poppins", system-ui;
+    font-size: 12px;
+    margin-top: 5px;
+  }
   
