--- a/frontend/src/pages/FogotPassword/ForgotPassword.module.scss
+++ b/frontend/src/pages/FogotPassword/ForgotPassword.module.scss
@@ -71,6 +71,7 @@ $success-color: #4caf50;
                 }
 
                 input {
+                    position: relative;
                     width: 100%;
                     padding: 16px 16px;
                     border: 1px solid $border-color;
@@ -87,6 +88,31 @@ $success-color: #4caf50;
                     &::placeholder {
                         color: #999;
                     }
+                }
+
+                .showNewPassword,.showConfirmNewPassword {
+                    position: absolute;
+                    transform: translate(50%, 50%);
+                    bottom: 45%;
+                    right: 45%;
+                    color: #000;
+                    border: none;
+                    opacity: 0.3;
+                    width: 20px;
+                    height: 20px;
+                    cursor: pointer;
+                    transition: transform 0.2s ease;
+
+                    svg {
+                        font-size: 20px;
+                    }
+                }
+
+                .showConfirmNewPassword{
+                    bottom: 30%;
+                    right: 45%;
+                    transform: translate(10px,6px);
+
                 }
             }
 
@@ -165,7 +191,7 @@ $success-color: #4caf50;
     font-size: 12px;
     margin-top: 5px;
     margin-bottom: 10px;
-  }
+}
 
 // Media queries for responsiveness
 @media (max-width: 480px) {
