--- a/frontend/src/pages/Control/main.module.css
+++ b/frontend/src/pages/Control/main.module.css
@@ -58,7 +58,6 @@
 }
 .container .buttons .infomation,
 .container .buttons .btn {
-  padding: 15px;
   padding-right: 0;
 }
 .container .buttons .infomation {
@@ -194,7 +193,8 @@
 .container .buttons .btn .controls_header,
 .container .buttons .btn .controler {
   display: flex;
-  justify-content: space-around;
+  margin-top: 22px;
+  justify-content: center;
   align-items: center;
 }
 .container .buttons .btn .controls_header .Btn,
@@ -223,6 +223,7 @@
   color: #000000;
   font-family: "Poppins", system-ui;
   border: 2px solid transparent;
+  cursor: pointer;
   min-width: 100px;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -262,6 +263,7 @@
 .container .buttons .btn .controler {
   display: grid;
   margin: 20px;
+  margin-top: 50px;
   gap: 20px;
   grid-template-columns: auto auto auto;
 }
@@ -370,4 +372,116 @@
 
 .export_excel:active {
   transform: translate(2px, 2px);
+}
+
+/* From Uiverse.io by cbolson */
+.switch {
+  --_switch-bg-clr: #70a9c5;
+  --_switch-padding: 4px; /* padding around button*/
+  --_slider-bg-clr: rgba(12, 74, 110, 0.65); /* slider color unchecked */
+  --_slider-bg-clr-on: rgba(12, 74, 110, 1); /* slider color checked */
+  --_slider-txt-clr: #ffffff;
+  --_label-padding: 1rem 2rem; /* padding around the labels -  this gives the switch it's global width and height */
+  --_switch-easing: cubic-bezier(
+    0.47,
+    1.64,
+    0.41,
+    0.8
+  ); /* easing on toggle switch */
+  color: white;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  border-radius: 9999px;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  position: relative;
+  isolation: isolate;
+}
+
+.switch input[type=checkbox] {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
+.switch > span {
+  display: grid;
+  place-content: center;
+  transition: opacity 300ms ease-in-out 150ms;
+  font-size: 1.6rem;
+  padding: var(--_label-padding);
+}
+
+.switch::before,
+.switch::after {
+  content: "";
+  position: absolute;
+  border-radius: inherit;
+  transition: inset 150ms ease-in-out;
+}
+
+/* switch slider */
+.switch::before {
+  background-color: var(--_slider-bg-clr);
+  inset: var(--_switch-padding) 50% var(--_switch-padding) var(--_switch-padding);
+  transition: inset 500ms var(--_switch-easing), background-color 500ms ease-in-out;
+  z-index: -1;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.3);
+}
+
+/* switch bg color */
+.switch::after {
+  background-color: var(--_switch-bg-clr);
+  inset: 0;
+  z-index: -2;
+}
+
+/* switch hover & focus */
+.switch:focus-within::after {
+  inset: -0.25rem;
+}
+
+.switch:has(input:checked):hover > span:first-of-type,
+.switch:has(input:not(:checked)):hover > span:last-of-type {
+  opacity: 1;
+  transition-delay: 0ms;
+  transition-duration: 100ms;
+}
+
+/* switch hover */
+.switch:has(input:checked):hover::before {
+  inset: var(--_switch-padding) var(--_switch-padding) var(--_switch-padding) 45%;
+}
+
+.switch:has(input:not(:checked)):hover::before {
+  inset: var(--_switch-padding) 45% var(--_switch-padding) var(--_switch-padding);
+}
+
+/* checked - move slider to right */
+.switch:has(input:checked)::before {
+  background-color: var(--_slider-bg-clr-on);
+  inset: var(--_switch-padding) var(--_switch-padding) var(--_switch-padding) 50%;
+}
+
+/* checked - set opacity */
+.switch > span:last-of-type,
+.switch > input:checked + span:first-of-type {
+  opacity: 0.75;
+}
+
+.switch > input:checked ~ span:last-of-type {
+  opacity: 1;
 }/*# sourceMappingURL=main.module.css.map */
