--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -1,181 +1,14 @@
-// .container {
-//   background-color: #e8e8e8;
-//   font-family: "Poppins", system-ui;
-// }
-// .navbar {
-//   display: flex;
-//   justify-content: space-between;
-//   flex-flow: row;
-//   align-items: center;
-//   background-color: #333;
-//   padding: 10px 20px;
-//   color: #fff;
-
-//   .logo {
-//     width: 50px;
-//     height: 50px;
-//     cursor: pointer;
-//   }
-
-//   .navLinks {
-//     display: flex;
-//     align-items: center;
-//     gap: 80px;
-//     list-style: none;
-//     display: flex;
-//     margin: 0;
-//     padding: 0;
-
-//     li {
-//       margin: 0 15px;
-
-//       .link {
-//         font-size: 1.8rem;
-//         font-weight: bold;
-//         color: #fff;
-//         text-decoration: none;
-//         transition: color 0.3s ease;
-
-//         &:hover {
-//           color: #1abc9c;
-//         }
-//       }
-//     }
-//   }
-
-//   .authButtons {
-//     display: flex;
-//     gap: 10px;
-
-//     .btn {
-//       transition: all 0.3s ease-in-out;
-//       font-family: "Dosis", sans-serif;
-//       text-transform: uppercase;
-//       border-radius: 50px;
-//       outline: none;
-//       cursor: pointer;
-//       border: none;
-//       font-size: 1.8rem;
-//       color: white;
-
-//       &:hover {
-//         transform: translateY(3px);
-//         box-shadow: none;
-//       }
-
-//       &:active {
-//         opacity: 0.5s;
-//       }
-//     }
-
-//     .signin {
-//       background-color: #1abc9c;
-//       color: #fff;
-
-//       &:hover {
-//         background-color: #16a085;
-//       }
-//     }
-
-//     .signout {
-//       background-color: #e74c3c;
-//       color: #fff;
-
-//       &:hover {
-//         background-color: #c0392b;
-//       }
-//     }
-//   }
-// }
-
-// .main {
-//   margin: 20px;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   flex-flow: column;
-
-//   .aboutSection {
-//     text-align: center;
-//     width: 100%;
-
-//     h1 {
-//       font-size: 4.8rem;
-//       text-transform: uppercase;
-//       color: #1abc9c;
-//     }
-
-//     p {
-//       margin: 10px 0;
-//       font-size: 1.8rem;
-//     }
-//   }
-
-//   .contents {
-//     display: flex;
-//     width: 100%;
-//     justify-content: center;
-//     gap: 20px;
-//     margin: 20px 0;
-
-//     .image {
-//       width: 100%;
-//       max-width: 50%;
-//       border-radius: 5px;
-//       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-//     }
-//   }
-
-//   .components {
-//     background: #fff;
-//     width: 100%;
-//     padding: 20px;
-//     border-radius: 8px;
-//     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-//     margin: 20px 0;
-
-//     h2 {
-//       color: #1abc9c;
-//       margin-bottom: 10px;
-//       font-size: 2rem;
-//     }
-
-//     ul {
-//       list-style: none;
-//       padding: 0;
-
-//       li {
-//         margin: 8px 0;
-//         font-size: 1.8rem;
-//         padding: 8px 10px;
-//         border-left: 4px solid #1abc9c;
-//         background-color: #f9f9f9;
-//       }
-//     }
-//   }
-// }
-
-// .footer {
-//   text-align: center;
-//   font-size: 1.4rem;
-//   padding: 10px 0;
-//   background-color: #1abc9c;
-//   color: white;
-
-//   p {
-//     margin: 0;
-//   }
-// }
-
 .main {
   width: 100%;
   height: 100%;
+  padding: 0 60px;
+  padding-bottom: 40px;
+  background: #e9f3f4;
 
   .industry-solutions {
     display: flex;
     justify-content: space-between;
-    padding: 20px 60px;
-    // background: #f9f9f9;
+    padding: 20px 0px;
 
     .content {
       max-width: 55%;
@@ -203,6 +36,82 @@
         margin: 55px 0;
       }
 
+      /* From Uiverse.io by elijahgummer */
+      .styled-button {
+        position: relative;
+        padding: 1rem 2rem;
+        font-size: 1.1rem;
+        font-weight: bold;
+        color: #ffffff;
+        background: linear-gradient(to bottom, #171717, #242424);
+        border-radius: 9999px;
+        cursor: pointer;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 1), 0 10px 20px rgba(0, 0, 0, 0.4);
+        transition: all 0.2s ease;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid #292929;
+
+        &::before {
+          content: "";
+          position: absolute;
+          top: -2px;
+          right: -1px;
+          bottom: -1px;
+          left: -1px;
+          background: linear-gradient(to bottom, #292929, #000000);
+          z-index: -1;
+          border-radius: 9999px;
+          transition: all 0.2s ease;
+          opacity: 1;
+        }
+
+        &:active {
+          transform: translateY(2px);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 1), 0 5px 10px rgba(0, 0, 0, 0.4);
+        }
+
+        .inner-button {
+          position: relative; /* Ensure relative positioning for pseudo-element */
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: linear-gradient(to bottom, #171717, #242424);
+          width: 40px;
+          height: 40px;
+          margin-left: 10px;
+          border-radius: 50%;
+          box-shadow: 0 0 1px rgba(0, 0, 0, 1);
+          border: 1px solid #252525;
+          transition: all 0.2s ease;
+
+          &::before {
+            content: "";
+            position: absolute;
+            top: -2px;
+            right: -1px;
+            bottom: -1px;
+            left: -1px;
+            background: linear-gradient(to bottom, #292929, #000000);
+            z-index: -1;
+            border-radius: 9999px;
+            transition: all 0.2s ease;
+            opacity: 1;
+          }
+
+          .icon {
+            filter: drop-shadow(0 10px 20px rgba(26, 25, 25, 0.9)) drop-shadow(0 0 4px rgba(0, 0, 0, 1));
+            transition: all 0.4s ease-in-out;
+
+            &:hover {
+              filter: drop-shadow(0 10px 20px rgba(50, 50, 50, 1)) drop-shadow(0 0 20px rgba(2, 2, 2, 1));
+              transform: rotate(-35deg);
+            }
+          }
+        }
+      }
+
       .learn-more {
         background: linear-gradient(to right, #09153f, #002bc2);
         color: white;
@@ -219,7 +128,8 @@
     }
 
     .image-container {
-      max-width: 35%;
+      margin-top: 40px;
+      max-width: 40%;
 
       img {
         width: 100%;
@@ -231,20 +141,25 @@
 }
 
 .features {
-  padding: 50px 20px;
+  .container {
+    background-color: #2a8e8e;
+    border-radius: 25px;
+    padding: 50px 60px;
+  }
+
+  padding: 50px 60px;
+  margin-bottom: 40px;
 
   h2 {
     font-size: 4rem;
     font-weight: bold;
-    color: #0048ff;
-    text-align: center;
+    color: #fff;
   }
 
   .feature-list {
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 250px;
     gap: 40px;
     margin-top: 20px;
     font-size: 1.6rem;
@@ -254,39 +169,43 @@
 }
 
 .image-section {
-  padding: 50px 0px;
-  margin: 0px 20px;
-  background-color: #c4d4ff;
+  border-radius: 20px;
+  margin: 60px;
+  background-color: #eff5f5;
+  .container {
+    padding: 60px;
+    h2 {
+      font-size: 4rem;
+      font-weight: bold;
+      color: #000;
+      margin-bottom: 20px;
+      padding-left: 20px;
+    }
 
-  h2 {
-    font-size: 4rem;
-    font-weight: bold;
-    color: #0048ff;
-    text-align: center;
-    margin-bottom: 20px;
-  }
+    ul.splide__pagination.splide__pagination--ltr[role="tablist"] {
+      bottom: 20px;
+    }
 
-  ul.splide__pagination.splide__pagination--ltr[role="tablist"] {
-    bottom: 20px;
-  }
+    .images {
+      display: flex;
+      flex-flow: row;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
 
-  .images {
-    display: flex;
-    flex-flow: row;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
+    img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      border-radius: 4px;
+      border: 1px solid #000;
+      transition: all 0.2s;
+    }
 
-  img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 4px;
-  }
-
-  ul.splide__pagination {
-    bottom: 20px !important;
+    ul.splide__pagination {
+      bottom: 20px !important;
+    }
   }
 }
 
@@ -345,66 +264,141 @@
 }
 
 .cta {
-  padding: 50px 20px;
-
-  h2 {
-    font-size: 32px;
-    font-weight: bold;
-    text-transform: uppercase;
-  }
-
-  p {
-    font-size: 18px;
-    color: #555;
-    max-width: 600px;
-    margin: 10px auto;
-  }
-
-  .cta-btn {
+  padding: 50px 60px;
+  .container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
-    .btn {
-      display: inline-block;
-      text-align: center;
-      padding: 15px 30px;
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      letter-spacing: 5px;
-      text-transform: uppercase;
-      cursor: pointer;
-      color: #2c9caf;
-      transition: all 1000ms;
-      font-size: 15px;
-      position: relative;
-      overflow: hidden;
-      outline: 2px solid #2c9caf;
+    flex-flow: row;
+    background-color: #0b3a4e;
+    padding: 60px;
+    border-radius: 25px;
 
-      &:hover {
-        color: #ffffff;
-        transform: scale(1.1);
-        outline: 2px solid #70bdca;
-        box-shadow: 4px 5px 17px -4px #268391;
+    .content {
+      width: 100%;
+      p:first-child{
+        font-size: 12px;
+        color:#2a8e9e;
+        font-weight: 500;
+      }
+      h2 {
+        font-size: 32px;
+        font-weight: bold;
+        color: #fff;
+        text-transform: uppercase;
+        margin: 10px 0;
       }
 
-      &::before {
-        content: "";
-        position: absolute;
-        left: -50px;
-        top: 0;
-        width: 0;
-        height: 100%;
-        background-color: #2c9caf;
-        transform: skewX(45deg);
-        z-index: -1;
-        transition: width 1000ms;
+      p:last-child {
+        font-size: 18px;
+        color: #555;
+        max-width: 600px;
+        color: #e9f3f4;
+      }
+    }
+
+    .cta-btn {
+      display: flex;
+      width: 100%;
+      gap: 10px;
+      justify-content: center;
+      align-items: center;
+      margin-top: 40px;
+      border-radius: 8px;
+
+      button {
+        border: none;
+        padding: 12px 24px;
+        border-radius: 4px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        transition: all 0.3s ease;
+    
+        &:hover {
+          transform: translateY(-2px);
+        }
       }
 
-      &:hover::before {
-        width: 250%;
+      .primary-button {
+        background-color: #2a8e9e;
+        color: white;
+
+        a{
+          width: 100%;
+          height: 100%;
+          text-decoration: none;
+          color: #fff;
+        }
+        
+        &:hover {
+          background-color: darken(#2a8e9e, 10%);
+        }
       }
+      
+      .secondary-button {
+        display: flex;
+        gap: 10px;
+        background-color: transparent;
+        border: 1px solid #2a8e9e;
+        color: white;
+        position: relative;
+      
+        &:hover {
+          background-color: darken(#2a8e9e, 10%);
+        }
+      }
+
+      .badge {
+        margin-left: 8px;
+        background-color: #ff4757;
+        color: white;
+        border-radius: 12px;
+        padding: 2px 8px;
+        font-size: 0.8em;
+        font-weight: bold;
+      }
+      
+
+      // .btn {
+      //   display: inline-block;
+      //   text-align: center;
+      //   padding: 15px 30px;
+      //   border: none;
+      //   border-radius: 5px;
+      //   font-weight: bold;
+      //   letter-spacing: 5px;
+      //   text-transform: uppercase;
+      //   cursor: pointer;
+      //   color: #2c9caf;
+      //   transition: all 1000ms;
+      //   font-size: 15px;
+      //   position: relative;
+      //   overflow: hidden;
+      //   outline: 2px solid #2c9caf;
+
+      //   &:hover {
+      //     color: #ffffff;
+      //     transform: scale(1.1);
+      //     outline: 2px solid #70bdca;
+      //     box-shadow: 4px 5px 17px -4px #268391;
+      //   }
+
+      //   &::before {
+      //     content: "";
+      //     position: absolute;
+      //     left: -50px;
+      //     top: 0;
+      //     width: 0;
+      //     height: 100%;
+      //     background-color: #2c9caf;
+      //     transform: skewX(45deg);
+      //     z-index: -1;
+      //     transition: width 1000ms;
+      //   }
+
+      //   &:hover::before {
+      //     width: 250%;
+      //   }
+      // }
     }
   }
 }
@@ -414,4 +408,11 @@
   background-color: #333;
   color: white;
   margin-top: 20px;
+}
+
+.loadingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; 
 }
