--- a/frontend/src/pages/Registration/Registration.module.scss
+++ b/frontend/src/pages/Registration/Registration.module.scss
@@ -64,7 +64,7 @@ $border-radius: 8px;
 
 .registrationFormContent,
 .signupFormContent {
-  // width: 30%;
+  width: 50%;
 
   img {
     width: 100%;
@@ -103,6 +103,7 @@ $border-radius: 8px;
 
   input {
     padding: 12px 10px;
+    position: relative;
     border: 1px solid $border-color;
     border-radius: $border-radius;
     @include transition;
@@ -144,7 +145,7 @@ $border-radius: 8px;
 
 .signinContainer {
   .showPassword {
-    bottom: 45%;
+    bottom: 42%;
     transform: translateY(2px);
   }
 }
@@ -357,4 +358,26 @@ $border-radius: 8px;
   display: flex;
   flex-direction: column;
   gap: 25px;
+}
+
+.hide{
+  opacity: 0;
+  visibility: hidden;
+}
+
+// Registration.module.scss
+
+.fullscreenLoader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); // Nền mờ (overlay)
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99999; // Đảm bảo Loader nằm trên cùng
 }
