--- a/frontend/src/components/navBar/navBar.module.scss
+++ b/frontend/src/components/navBar/navBar.module.scss
@@ -212,7 +212,6 @@ $desktop-breakpoint: 1400px;
             }
 
             svg {
-              margin-left: 5px;
               width: 20px;
               height: 20px;
               transition: all 0.3s ease-in-out;
@@ -224,6 +223,10 @@ $desktop-breakpoint: 1400px;
 
               @media screen and (min-width: $mobile-breakpoint) {
                 display: none;
+
+                &.dropdown-icon {
+                  display: block;
+                }
               }
             }
           }
