update: responsive industry-slution, features for tablet and mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,6 +8,9 @@ html,
 body {
   font-size: 62.5%;
   font-family: "Poppins", system-ui;
+  -webkit-font-smoothing: antialiased;
+  /* tương đương trên Firefox/macOS */
+  -moz-osx-font-smoothing: grayscale;
 }
 
 ::-webkit-scrollbar {
