--- a/frontend/src/components/FeatureCard/FeatureCard.module.scss
+++ b/frontend/src/components/FeatureCard/FeatureCard.module.scss
@@ -13,8 +13,7 @@
   }
 
   .feature-card-image {
-    width: 100%;
-    min-height: 300px;
+    width: auto;
 
     img {
       width: 100%;
@@ -38,10 +37,21 @@
 
     h3 {
       font-size: 2.4rem;
+      @media screen and (max-width: 992px) {
+        font-size: 2rem;
+      }
+
+      @media screen and (max-width: 768px) {
+        font-size: 1.8rem;
+      }
     }
 
     p {
       font-size: 1.4rem;
+
+      @media screen and (max-width: 768px) {
+        font-size: 1.2rem;
+      }
     }
   }
 }
