--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -22,7 +22,7 @@ $extra-large-desktop-breakpoint: 1400px;
 
       h1 {
         font-size: 4.6rem;
-        min-height: 4rem;
+        min-height: 140px;
         font-weight: bold;
         margin-bottom: 1rem;
         text-transform: uppercase;
@@ -41,9 +41,18 @@ $extra-large-desktop-breakpoint: 1400px;
           font-weight: bold;
         }
 
+        @media screen and (max-width: $extra-large-desktop-breakpoint) {
+          min-height: 140px;
+        }
+
+        @media screen and (max-width: $large-desktop-breakpoint) {
+          min-height: 210px;
+        }
+
         @media screen and (max-width: $desktop-breakpoint) {
           font-size: 3rem;
           margin-bottom: 0;
+          min-height: 90px;
         }
       }
 
@@ -166,11 +175,20 @@ $extra-large-desktop-breakpoint: 1400px;
         }
       }
 
-      @media screen and (max-width: $mobile-breakpoint) {
-        h1 {
-          font-size: 3.6rem;
-          letter-spacing: 3px;
-          text-align: center;
+      @media screen and (max-width: $tablet-breakpoint) {
+        .animated-heading {
+          min-height: 170px;
+        }
+      }
+
+      @media screen and (max-width: 320px) {
+        .animated-heading {
+          min-height: 220px;
+          h1 {
+            font-size: 3.6rem;
+            letter-spacing: 3px;
+            text-align: center;
+          }
         }
 
         p {
@@ -228,16 +246,15 @@ $extra-large-desktop-breakpoint: 1400px;
   .container {
     background-color: #2a8e8e;
     border-radius: 25px;
-    padding: 50px 60px;
+    padding: 20px;
+    padding-bottom: 40px;
     width: 100%;
     display: flex;
     flex-flow: column;
     justify-content: center;
 
     @media screen and (max-width: $desktop-breakpoint) {
-      padding: 40px 20px;
-
-     
+      padding: 20px;
     }
   }
 
@@ -248,11 +265,20 @@ $extra-large-desktop-breakpoint: 1400px;
     font-size: 4rem;
     font-weight: bold;
     color: #fff;
+
+    @media screen and (max-width: $desktop-breakpoint) {
+      font-size: 3rem;
+    }
+
+    @media screen and (max-width: $tablet-breakpoint) {
+      font-size: 2.6rem;
+    }
   }
 
   .feature-list {
     display: flex;
     justify-content: center;
+    padding: 0;
     width: 100%;
     gap: 40px;
     margin-top: 20px;
@@ -261,11 +287,15 @@ $extra-large-desktop-breakpoint: 1400px;
     transition: 0.3s ease;
 
     .card {
-      gap: 40px;
+      gap: 20px;
       justify-content: center;
       --bs-gutter-x: 0;
       .card-item {
         padding: 0;
+
+        @media screen and (min-width: #{$desktop-breakpoint+0.1px}) {
+          width: 30%;
+        }
       }
     }
   }
@@ -278,22 +308,9 @@ $extra-large-desktop-breakpoint: 1400px;
 
 .image-section {
   border-radius: 20px;
-  margin: 60px;
+  position: relative;
   background-color: #eff5f5;
   .container {
-    padding: 60px;
-    h2 {
-      font-size: 4rem;
-      font-weight: bold;
-      color: #000;
-      margin-bottom: 20px;
-      padding-left: 20px;
-    }
-
-    ul.splide__pagination.splide__pagination--ltr[role="tablist"] {
-      bottom: 20px;
-    }
-
     .images {
       display: flex;
       flex-flow: row;
@@ -304,15 +321,32 @@ $extra-large-desktop-breakpoint: 1400px;
 
     img {
       width: 100%;
-      height: 300px;
+      height: 500px;
       object-fit: cover;
       border-radius: 4px;
-      border: 1px solid #000;
       transition: all 0.2s;
     }
 
     ul.splide__pagination {
       bottom: 20px !important;
+    }
+  }
+  .mySwiper {
+    overflow: unset;
+
+    :global {
+      .swiper-button-prev,
+      .swiper-button-next {
+        &:after {
+          @media screen and (max-width: $desktop-breakpoint) {
+            font-size: 36px;
+          }
+
+          @media screen and (max-width: $tablet-breakpoint) {
+            font-size: 24px;
+          }
+        }
+      }
     }
   }
 }
